--- a/HistoricVol.ipynb
+++ b/HistoricVol.ipynb
@@ -1,6 +1,107 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from __future__ import division\n",
+    "from numpy import *\n",
+    "from pylab import *\n",
+    "from numpy.random import rand\n",
+    "import scipy.stats\n",
+    "import  scipy.linalg\n",
+    "from scipy.optimize.lbfgsb import fmin_l_bfgs_b\n",
+    "\n",
+    "\n",
+    "##########################################################################################################################################################\n",
+    "def historic_vol(currency,tenor):\n",
+    "\n",
+    "    #Volatilidad historica estandar\n",
+    "            \n",
+    "    M = currency.shape[0]   #No de dias que tenemos del spot\n",
+    "    \n",
+    "    #Definimos un vector de retornos logaritmicos\n",
+    "    log_return = zeros((M-1,1))\n",
+    "\n",
+    "    #Definimos el numero de observaciones moviles a usar dependiendo del plazo\n",
+    "    if tenor == '1W':\n",
+    "        obs = 5\n",
+    "    if tenor == '2W':\n",
+    "        obs = 10\n",
+    "    elif tenor == '1M':\n",
+    "        obs = 21\n",
+    "    elif tenor == '2M':\n",
+    "        obs = 43\n",
+    "    elif tenor == '3M':\n",
+    "        obs = 65\n",
+    "    elif tenor == '6M':\n",
+    "        obs = 129\n",
+    "    elif tenor == '9M':\n",
+    "        obs = 194\n",
+    "    elif tenor == '1Y':\n",
+    "        obs = 260\n",
+    "    elif tenor == '2Y':\n",
+    "        obs = 520\n",
+    "\n",
+    "    N = M-obs     #No de retornos que usaremos para calcular la volatilidad. Perdemos el numero obs  \n",
+    "  \n",
+    "    #Calculamos los retornos\n",
+    "    for i in xrange(0,M-1):\n",
+    "        log_return[i] = log(currency[i+1,4])-log(currency[i,4])\n",
+    "\n",
+    "    #Definimos una matriz para almacenar los calculos\n",
+    "    calculations = zeros((N,4))\n",
+    "\n",
+    "    for i in xrange(0,N):\n",
+    "        calculations[i,0] = log_return[i+obs-1]\n",
+    "        calculations[i,1] = mean(log_return[i:i+obs])\n",
+    "        calculations[i,2] = (calculations[i,0] - calculations[i,1])**2\n",
+    "\n",
+    "    for i in xrange(obs-1,N):\n",
+    "        calculations[i,3] = (252**0.5)*(sum(calculations[i-obs+1:i+1,2])/(size(calculations[i-obs+1:i+1,2])-1))**0.5\n",
+    "\n",
+    "    #Definicion de un vector con las fechas\n",
+    "    fechas = empty((N,1),dtype =datetime.date)\n",
+    "        \n",
+    "    for i in xrange(obs,M):\n",
+    "        fechas[i-obs] = datetime.date(int(currency[i,0][6:10]), int(currency[i,0][3:5]), int(currency[i,0][0:2]))\n",
+    "\n",
+    "    #Definimos una matrix de resultados finales\n",
+    "    vols_standar = zeros((N,2))\n",
+    "\n",
+    "    #vols_standar[:,0] = currency[obs:M,0]\n",
+    "    vols_standar[1:N,0] = log_return[obs:M,0]\n",
+    "    vols_standar[:,1] = calculations[:,3]\n",
+    "\n",
+    "    #Creacion de la matriz completa\n",
+    "    \n",
+    "    vols_standar=concatenate((fechas,vols_standar),axis=1)\n",
+    "    \n",
+    "    return  vols_standar    \n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
